--- a/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/p2/org.eclipse.equinox.p2.engine/profileRegistry/DefaultProfile.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
+++ b/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/p2/org.eclipse.equinox.p2.engine/profileRegistry/DefaultProfile.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
@@ -14,6 +14,21 @@ repositories/file\:_comptes_E114420U_M2_com.mia.studio.ide-2015-09-10_11-50-35.g
 repositories/file\:_comptes_E114420U_M2_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
 repositories/file\:_comptes_E114420U_M2_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/uri=file\:/comptes/E114420U/M2/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/configuration/org.eclipse.osgi/bundles/286/data/listener_1925729951/
 repositories/file\:_comptes_E114420U_M2_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/version=1.0.0
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/description=
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/enabled=true
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/isSystem=true
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/name=/comptes/E114420U/M2/option/Je-push-le-Mia/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/.eclipseextension
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/provider=
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/type=org.eclipse.equinox.p2.extensionlocation.metadataRepository
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/uri=file\:/comptes/E114420U/M2/option/Je-push-le-Mia/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/.eclipseextension
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/version=1
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/enabled=true
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/isSystem=true
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/name=dropins
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/suffix=content.xml
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/uri=file\:/comptes/E114420U/M2/option/Je-push-le-Mia/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/configuration/org.eclipse.osgi/bundles/286/data/listener_1925729951/
+repositories/file\:_comptes_E114420U_M2_option_Je-push-le-Mia_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_configuration_org.eclipse.osgi_bundles_286_data_listener_1925729951/version=1.0.0
 repositories/file\:_comptes_E114420U_M2_option_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/description=
 repositories/file\:_comptes_E114420U_M2_option_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/enabled=true
 repositories/file\:_comptes_E114420U_M2_option_com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64_.eclipseextension/isSystem=true
