--- a/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/configuration/.settings/org.eclipse.ui.ide.prefs
+++ b/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/configuration/.settings/org.eclipse.ui.ide.prefs
@@ -1,5 +1,5 @@
 MAX_RECENT_WORKSPACES=5
-RECENT_WORKSPACES=/comptes/E114420U/M2/option/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/workspace\n/comptes/E114420U/M2/option/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/workspace2\n$\n/comptes/E114420U/M2/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/workspace
+RECENT_WORKSPACES=/comptes/E114420U/M2/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/workspace\n/comptes/E114420U/M2/option/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/workspace2\n/comptes/E114420U/M2/option/com.mia.studio.ide-2015-09-10_11-50-35.gtk.x86_64/workspace\n$
 RECENT_WORKSPACES_PROTOCOL=3
 SHOW_WORKSPACE_SELECTION_DIALOG=false
 eclipse.preferences.version=1
